--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "magento/module-graph-ql": "*",
     "magento/module-quote": "*",
     "magento/module-sales": "*",
-    "magento/module-store": "*"
+    "magento/module-store": "*",
+    "magento/module-sales-graph-ql": ">=100.4.0 <100.4.8"
   },
   "scripts": {
     "test": "phpunit --bootstrap vendor/autoload.php test",
